examples/test/testpolicy648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy648
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key35: value40
      key44: value31
      key39: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value14
      podSelector:
        matchLabels:
          key10: value9
          key44: value11
          key6: value13
